# jgoutin.github.io

./: .gitignore  CNAME  Gemfile  _config.yml  fr_FR.md  index.md  pyproject.toml  readme.md  zensical.en.toml  zensical.fr.toml
.github/workflows/: jekyll.yml  pages.yml
_layouts/: default.html
assets/css/: style.scss
assets/en_US/: CV_J_Goutin.md  projects.md
assets/fr_FR/: CV_J_Goutin.md  projets.md
docs/_root/: index.html  robots.txt
docs/_root/assets/stylesheets/: extra.css
docs/en/: contact.md  index.md  legal.md  privacy.md  products.md  projects.md  resume.md  services.md
docs/fr/: contact.md  index.md  legal.md  privacy.md  products.md  projects.md  resume.md  services.md
docs_hooks/: build.py
en_US/: CV_J_Goutin.md  contact.md  products.md  projects.md  services.md
fr_FR/: CV_J_Goutin.md  contact.md  products.md  projets.md  services.md
github_sponsor/: introduction.md  short_bio.md  tiers.md
linkedin/: Languages.csv  Positions.csv  Profile.csv  Projects.csv  Recommendations_Received.csv  Skills.csv
