[project]
name = "jgoutin-dev"
version = "0.0.0"
description = "Source for https://jgoutin.dev/."
authors = [{ name = "Jérémy Goutin", email = "contact@jgoutin.dev" }]
requires-python = ">=3.14"

[dependency-groups]
docs = [
    "zensical",
    "pypandoc-binary",
    "weasyprint",
    "cairosvg",
]
